Flattened code to help wrapping for other languages and implemented rudimentary keymaps

--- a/LibCorsairRGB/LibCorsairRGB.vcxproj
+++ b/LibCorsairRGB/LibCorsairRGB.vcxproj
@@ -103,6 +103,7 @@ xcopy /y "$(ProjectDir)keymaps.h" "$(SolutionDir)target\include\LibCorsairRGB"
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
       </PrecompiledHeader>
     </ClCompile>
+    <ClCompile Include="keymaps.cpp" />
     <ClCompile Include="LibCorsairRGB.cpp" />
     <ClCompile Include="stdafx.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Create</PrecompiledHeader>
