--- a/LibCorsairRGB/LibCorsairRGB.vcxproj.filters
+++ b/LibCorsairRGB/LibCorsairRGB.vcxproj.filters
@@ -38,5 +38,8 @@
     <ClCompile Include="dllmain.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="keymaps.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
